Working AR View; alignment still buggy

--- a/IGS/Resources/HttpRoot/css/site.css
+++ b/IGS/Resources/HttpRoot/css/site.css
@@ -47,6 +47,7 @@ div#arview {
     top: 10%;
     left: 0;
     width: 100%;
+	height: 100%;
     overflow:hidden;
 }
 
